[gd_scene load_steps=21 format=3 uid="uid://dnywk8mh7gv0s"]

[ext_resource type="Texture2D" uid="uid://dat5xbpaag24i" path="res://Game Assets/Main Menu Assets/container.png" id="1_fphfs"]
[ext_resource type="Script" uid="uid://vq5efrwtkcpf" path="res://Scripts/UI/mainmenu_scene.gd" id="1_tg8s8"]
[ext_resource type="Texture2D" uid="uid://poarhlftdhh4" path="res://Game Assets/Main Menu Assets/background.png" id="2_6xs0p"]
[ext_resource type="Texture2D" uid="uid://kf8rr0rxfkwr" path="res://Game Assets/Main Menu Assets/play1.png" id="2_60b48"]
[ext_resource type="Texture2D" uid="uid://cgwmob18rwjby" path="res://Game Assets/Main Menu Assets/game title.png" id="3_tg8s8"]
[ext_resource type="Texture2D" uid="uid://ckx3uepp8ydng" path="res://Game Assets/Main Menu Assets/play2.png" id="4_1khr5"]
[ext_resource type="Texture2D" uid="uid://bw0ch6gcfo8jd" path="res://Game Assets/Main Menu Assets/settings1.png" id="5_bkwvc"]
[ext_resource type="Texture2D" uid="uid://bb10b1wck7k54" path="res://Game Assets/Main Menu Assets/settings2.png" id="6_g0s5o"]
[ext_resource type="Texture2D" uid="uid://vr886k7n1ntw" path="res://Game Assets/Main Menu Assets/credits1.png" id="7_8eynx"]
[ext_resource type="Texture2D" uid="uid://by2p3h0753r6k" path="res://Game Assets/Main Menu Assets/credits2.png" id="8_60yge"]
[ext_resource type="Texture2D" uid="uid://d4krvmvg0xwme" path="res://Game Assets/Main Menu Assets/quit1.png" id="9_6b4dk"]
[ext_resource type="Texture2D" uid="uid://cgtlcv80kgocm" path="res://Game Assets/Main Menu Assets/quit2.png" id="10_tg8s8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1khr5"]
atlas = ExtResource("2_60b48")
region = Rect2(80, 108, 348, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5e2a"]
atlas = ExtResource("4_1khr5")
region = Rect2(80, 108, 348, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eynx"]
atlas = ExtResource("5_bkwvc")
region = Rect2(76.7411, 191.133, 349.481, 91.7991)

[sub_resource type="AtlasTexture" id="AtlasTexture_60yge"]
atlas = ExtResource("6_g0s5o")
region = Rect2(76.741, 191.133, 349.481, 91.799)

[sub_resource type="AtlasTexture" id="AtlasTexture_6b4dk"]
atlas = ExtResource("7_8eynx")
region = Rect2(76.3138, 283.545, 353.719, 76.8595)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg8s8"]
atlas = ExtResource("8_60yge")
region = Rect2(83.183, 283.545, 339.818, 76.86)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xs0p"]
atlas = ExtResource("9_6b4dk")
region = Rect2(77.7999, 368.387, 347.699, 78.5132)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ak3l"]
atlas = ExtResource("10_tg8s8")
region = Rect2(77.8, 368.387, 347.699, 78.513)

[node name="MainmenuScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tg8s8")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6xs0p")

[node name="GameTitle" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_tg8s8")

[node name="Container" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_fphfs")

[node name="MarginContainer" type="MarginContainer" parent="Container"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0625
anchor_top = 0.149691
anchor_right = 0.368924
anchor_bottom = 0.669753
offset_left = 5.0
offset_top = 25.0002
offset_right = 4.99957
offset_bottom = 25.0001
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Container/MarginContainer"]
layout_mode = 2

[node name="Play" type="TextureButton" parent="Container/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_1khr5")
texture_pressed = SubResource("AtlasTexture_y5e2a")

[node name="Settings" type="TextureButton" parent="Container/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_8eynx")
texture_pressed = SubResource("AtlasTexture_60yge")

[node name="Credits" type="TextureButton" parent="Container/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_6b4dk")
texture_pressed = SubResource("AtlasTexture_tg8s8")

[node name="Quit" type="TextureButton" parent="Container/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_6xs0p")
texture_pressed = SubResource("AtlasTexture_6ak3l")

[connection signal="pressed" from="Container/MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Container/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Container/MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Container/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
